Fixing DRP PLM pingback previews type reporting for blacklist

When a preview is client blacklisted, this should be reported to the
Data reduction proxy pageload metrics pingback. However, the boolean for
this is not properly copied before content moves the navigation data
cross thread. This is resulting in never reporting the client blacklist
blocking the optimization.

Another bool (offline_preview_used) is also not copied, but it is only
used on the IO thread currently, so there is not functional bug.

Bug: 890983
Change-Id: I6fafaa91d875b590ee5c5c725bc6f487e63395c4
Reviewed-on: https://chromium-review.googlesource.com/1255889
Reviewed-by: Doug Arnett <dougarnett@chromium.org>
Commit-Queue: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595598}
Former-commit-id: af76daadb696529131a73690da28a01fc0b85d56